# open-autonomy-client

./: .gitignore  HISTORY.md  Makefile  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  main_workflow.yml  release.yml
open_autonomy_client/: __init__.py  client.py  downloader.py
scripts/: check_copyright.py  whitelist.py
tests/: __init__.py  test_client.py  test_demo.py  test_downloader.py
