[tool.poetry]
name = "open-autonomy-client"
version = "0.1.0"
description = "Autonomous Service Client SDK"
authors = ["Yuri (solarw) Turchenkov <solarw.mail@gmail.com>"]
maintainers = ["David Minarsch <david.minarsch@googlemail.com>"]
readme = "README.md"
repository = "https://github.com/valory-xyz/open-autonomy-client"
keywords = ["client", "sdk", "autonomy", "autonomous", "autonolas", "service", "multi", "agent"]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System",
]
packages = [{include = "open_autonomy_client"}]

[tool.poetry.dependencies]
python = "^3.10"
eth-account = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
tomte = {extras = ["black", "isort", "tests"], version = "^0.2.2"}
tox = "3.28.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
